# build-dragon

./: README.md
.github/safety/: check_safety.sh
.github/workflows/: android.yml  assembly.yml  cpp.yml  safety.yml  swift.yml
android-auditor/: README.md  auditor.py  requirements.txt
android-auditor/assembly/: BUILDING.md  Makefile  README.md  add_sum.s  add_sum_aarch64.s  hello.s  hello_aarch64.s  test_sum.c
android-auditor/c_auditor/: Makefile  README.md  c_auditor  main.c  sum  sum.c  sum.comp  sum_gpu.c  sum_parallel  sum_parallel.c
android-auditor/cpp_auditor/: Makefile  README.md  cpp_auditor  main.cpp  realtime_fixer  realtime_fixer.cpp  safe_sum.s  sum  sum.cpp
android-auditor/cpp_auditor/android_cpp/: CMakeLists.txt  README.md  main.cpp
android-auditor/kotlin_auditor/: Main.kt  Makefile  README.md
android-auditor/perf/: CMakeLists.txt  README.md  aligned_buffer.h  perf_benchmark.cpp
ios_auditor/: README.md
ios_auditor/assembly/: hello_x86_64.s
ios_auditor/bridge/: README.md  bridge.cpp  bridge.h  objc_wrapper.m
ios_auditor/swift_auditor/: README.md  main.swift
setout/: Makefile  README.md
setout/asm/: fast_memcpy_aarch64.s  fast_memcpy_x86_64.s
setout/src/: asm_test.c  helper.c  helper.h  main.c  main.cpp  util.cpp  util.h
setout/tests/: run.sh
